<resources>
    <string name="app_name">LoLDB.JP</string>

    <string name="fragment_top_free_to_play_champions">FreeToPlay Champions</string>
    <string name="fragment_top_free_to_play_date">毎週火曜日本時間AM2:00頃更新</string>

    <string name="com_loading">読み込み中</string>

    <string name="pager_top">トップ</string>

    <string name="fragment_top_edit_placeholder">チャンピオン名、アイテム名</string>
    <string name="fragment_top_type_search">チャンピオンタイプから探す</string>
    <string name="fragment_top_number_search">数値から探す</string>
    <string name="fragment_top_type_search_initial">タイプ:</string>
    <string name="fragment_top_number_search_initial">から探す</string>
    <string name="fragment_top_number_win">勝率</string>
    <string name="fragment_top_number_ban">BAN率</string>
    <string name="fragment_top_number_pick">使用率</string>
    <string name="fragment_top_type_search_all">すべて</string>
    <string name="fragment_top_type_search_mage">メイジ</string>
    <string name="fragment_top_type_search_tank">タンク</string>
    <string name="fragment_top_type_search_fighter">ファイター</string>
    <string name="fragment_top_type_search_marksman">マークスマン</string>
    <string name="fragment_top_type_search_support">サポート</string>
    <string name="fragment_top_type_search_assassin">アサシン</string>


    <string name="fragment_champion_list_title">チャンピオンリスト</string>

    <string name="fragment_search_title">検索条件</string>
    <string name="fragment_search_condition">条件</string>
    <string name="fragment_search_tags">タイプから探す</string>
    <string name="fragment_search_partype">エナジータイプから探す</string>
    <string name="fragment_search_name">名前から探す</string>
    <string name="fragment_search_button">検索</string>
    <string name="fragment_search_result" formatted="false">検索条件:</string>
</resources>
